# parallel-and-distributed-computing-course

./: .gitignore  CMakeLists.txt  add_Numbers.c  calculatePrime.c  find_min_max.c  matrixMultiplicationParallel.c  matrixMultiplicationSerial.c  mutual_exclusion.c  sort.c  test.c
